@@ -1,3 +1,4 @@
+	* add moving_storage field to torrent_status
 	* expose UPnP and NAT-PMP mapping in session object
 	* DHT refactoring and support for storing arbitrary data with put
 	* support building on android
